--- a/home.html
+++ b/home.html
@@ -16,11 +16,11 @@
                 <nav>
                      <!-- ul.header -->
                     <ul class="header__nav">
-                        <li class="li"><a href="">HOME</a></li>
-                        <li class="li"><a href="">ABOUT</a></li>
-                        <li class="li"><a href="">CATALOG</a></li>
-                        <li class="li"><a href="">UPDATES</a></li>
-                        <li class="li"><a href="">CONTACTS</a></li>
+                        <li><a href="./home.html">HOME</a></li>
+                        <li><a href="./about.html">ABOUT</a></li>
+                        <li><a href="./about.html">CATALOG</a></li>
+                        <li><a href="./about.html">UPDATES</a></li>
+                        <li><a href="./contact.html">CONTACTS</a></li>
                     </ul>
                 </nav>
                 <div class="toggle__menu">
