--- a/home.html
+++ b/home.html
@@ -18,8 +18,8 @@
                     <ul class="header__nav">
                         <li><a href="./home.html">HOME</a></li>
                         <li><a href="./about.html">ABOUT</a></li>
-                        <li><a href="./about.html">CATALOG</a></li>
-                        <li><a href="./about.html">UPDATES</a></li>
+                        <li><a href="./catalog.html">CATALOG</a></li>
+                        <li><a href="./updates.html">UPDATES</a></li>
                         <li><a href="./contact.html">CONTACTS</a></li>
                     </ul>
                 </nav>
