--- a/about.html
+++ b/about.html
@@ -61,63 +61,81 @@
         </div>
     </section>
      <!-- LATEST STYLE BANNER-->
-     <section class="latestBanner">
-        <div class="container">
-            <h1>Latest style</h1>
-            <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat eligendi et veritatis ipsum cum perferendis inventore ex itaque praesentium minima!</h2>
-            <div class="latestBanner__wrapper">
-                <div class="latestBanner__card">
-                    <img src="/img/latest-1.png" alt="">
-                    <div class="latestBanner__card--content">
-                        <h3>Formal Theme</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit asperiores debitis facere alias error nam.</p>
-                    </div>
-                </div>
-
-                <div class="latestBanner__card">
-                    <img src="/img/latest-2.png" alt="">
-                    <div class="latestBanner__card--content">
-                        <h3>Modern Theme</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit asperiores debitis facere alias error nam.</p>
-                    </div>
-                </div>
-
-                <div class="latestBanner__card">
-                    <img src="/img/latest-3.png" alt="">
-                    <div class="latestBanner__card--content">
-                        <h3>Boho Theme</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit asperiores debitis facere alias error nam.</p>
-                    </div>
-                </div>
-
-                <div class="latestBanner__card">
-                    <img src="/img/latest-4.png" alt="">
-                    <div class="latestBanner__card--content">
-                        <h3>Minimalist Theme</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit asperiores debitis facere alias error nam.</p>
-                    </div>
-                </div>
-
-                <div class="latestBanner__card">
-                    <img src="/img/latest-5.png" alt="">
-                    <div class="latestBanner__card--content">
-                        <h3>Wooden Theme</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit asperiores debitis facere alias error nam.</p>
-                    </div>
-                </div>
-
-                <div class="latestBanner__card">
-                    <img src="/img/latest-6.png" alt="">
-                    <div class="latestBanner__card--content">
-                        <h3>Spanish Theme</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit asperiores debitis facere alias error nam.</p>
-                    </div>
-                </div>
+     <section class="package">
+        <div class="package_wrapper">
+          <h2>Interior Design Package</h2>
+          <div class="package_theme">
+            <div class="package_left">
+              <img src="./img/catalog-1.png" alt="" />
             </div>
+            <div class="package_right">
+              <h2>Minimalist Theme</h2>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
+                iaculis suscipit ipsum sit amet laoreet. Nam sit amet enim
+                vulputate magna ornare ullamcorper nec vitae ante. Integer
+                hendrerit ligula sit amet tortor pulvinar suscipit. Vestibulum et
+                volutpat enim. Donec nisl velit, volutpat ut fermentum ut, egestas
+                eget purus. Phasellus condimentum tellus eu velit eleifend, at
+                bibendum diam gravida. In dictum nisl id leo tincidunt, vel
+                vestibulum metus sollicitudin. Praesent blandit leo vitae ultrices
+                suscipit. Etiam elementum ornare neque at dictum. Curabitur nisi
+                nibh, molestie sed fermentum sed, mollis id neque. In at ipsum
+                mattis, consequat orci vitae, mattis ipsum. Nam libero magna,
+                tincidunt et eleifend a, elementum malesuada nibh. Maecenas ornare
+                sapien ut leo sagittis, at pretium sem faucibus.
+              </p>
+            </div>
+          </div>
+          <div class="package_theme">
+            <div class="package_left">
+              <img src="./img/catalog-2.png" alt="" />
+            </div>
+            <div class="package_right">
+              <h2>Retro Theme</h2>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
+                iaculis suscipit ipsum sit amet laoreet. Nam sit amet enim
+                vulputate magna ornare ullamcorper nec vitae ante. Integer
+                hendrerit ligula sit amet tortor pulvinar suscipit. Vestibulum et
+                volutpat enim. Donec nisl velit, volutpat ut fermentum ut, egestas
+                eget purus. Phasellus condimentum tellus eu velit eleifend, at
+                bibendum diam gravida. In dictum nisl id leo tincidunt, vel
+                vestibulum metus sollicitudin. Praesent blandit leo vitae ultrices
+                suscipit. Etiam elementum ornare neque at dictum. Curabitur nisi
+                nibh, molestie sed fermentum sed, mollis id neque. In at ipsum
+                mattis, consequat orci vitae, mattis ipsum. Nam libero magna,
+                tincidunt et eleifend a, elementum malesuada nibh. Maecenas ornare
+                sapien ut leo sagittis, at pretium sem faucibus.
+              </p>
+            </div>
+          </div>
+          <div class="package_theme">
+            <div class="package_left">
+              <img src="./img/catalog-3.png" alt="" />
+            </div>
+            <div class="package_right">
+              <h2>Minimalist Theme</h2>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
+                iaculis suscipit ipsum sit amet laoreet. Nam sit amet enim
+                vulputate magna ornare ullamcorper nec vitae ante. Integer
+                hendrerit ligula sit amet tortor pulvinar suscipit. Vestibulum et
+                volutpat enim. Donec nisl velit, volutpat ut fermentum ut, egestas
+                eget purus. Phasellus condimentum tellus eu velit eleifend, at
+                bibendum diam gravida. In dictum nisl id leo tincidunt, vel
+                vestibulum metus sollicitudin. Praesent blandit leo vitae ultrices
+                suscipit. Etiam elementum ornare neque at dictum. Curabitur nisi
+                nibh, molestie sed fermentum sed, mollis id neque. In at ipsum
+                mattis, consequat orci vitae, mattis ipsum. Nam libero magna,
+                tincidunt et eleifend a, elementum malesuada nibh. Maecenas ornare
+                sapien ut leo sagittis, at pretium sem faucibus.
+              </p>
+            </div>
+          </div>
+          
         </div>
     </section>
-
-
     <!-- CALL TO ACTION -->
  <!-- section.cta>.container>.cta__wrapper-->
  <section class="cta">
