--- a/updates.html
+++ b/updates.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
-    <!--HEADER-->
+
     <header class="header">
         <div class="container">
             <div class="header__wrapper">
@@ -31,7 +31,20 @@
             </div>
         </div>
     </header>
-
+    <section class="updates">
+        <div class="container">
+            <div class="updates__wrapper">
+                <div class="upates__left">
+                    <h1>latest Theme</h1>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet explicabo optio architecto assumenda deleniti aut nam labore magni tempore suscipit. Debitis aspernatur laborum laboriosam exercitationem quia non repudiandae id dolor beatae distinctio obcaecati facilis quod doloribus, minima optio. Sapiente distinctio et praesentium itaque soluta. Quasi, officia, eum nisi, cum distinctio pariatur ex officiis numquam id dolorum enim obcaecati porro? Eveniet inventore asperiores odio eos cum numquam, modi officia animi et sunt. Provident facere architecto fugit repellat, rem optio voluptates suscipit accusamus reprehenderit modi quaerat beatae dignissimos ducimus, est eveniet blanditiis eum minima inventore incidunt. Necessitatibus molestias praesentium veniam beatae excepturi?</p>
+             
+                </div>
+            </div>
+            <div class="update__right">
+                <img src="./img/update-banner.png" alt="" />
+            </div>
+        </div>
+    </section>
     <!-- CALL TO ACTION -->
  <!-- section.cta>.container>.cta__wrapper-->
  <section class="cta">
