Inside style web

--- a/about.html
+++ b/about.html
@@ -35,105 +35,82 @@
     <!--About Banner-->
     <!-- section.aboutbanner>.container>.aboutbanner__wrapper-->
 
-    <section class="aboutbanner">
-        <div class="container">
-            <div class="about__wrapper">
-                <div class="aboutbanner__left">
-                    <img src="./img/about.png" alt="">
-
-                    <small>Interior Designer</small>
-                
-                </div>
-                <div class="aboutbanner__right">
-                    <H1>ABOUT US</H1>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae ducimus hic similique corporis, commodi aperiam enim quas officiis corrupti iure dolor eos veritatis. Voluptas deleniti quaerat expedita, aspernatur quibusdam vero? Dignissimos pariatur dicta, fugiat minima modi sed magni, tempore quos dolores deleniti architecto eveniet error esse repellendus quam, amet officiis.
-                    </p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In et deserunt dicta quia ipsa corrupti nulla delectus dignissimos accusamus architecto commodi, unde illum sint numquam illo fugiat eos ex ipsam similique! Voluptatibus, dolores. A voluptate dolor eius illum esse. Nemo a recusandae impedit neque possimus? Perspiciatis ipsum quibusdam porro quas, nam earum quae sequi cumque id enim voluptas tempore amet.</p>
-                    <ul>
-                        <li><a href=""><i class="fa-brands fa-facebook"></i></a></li>
-                        <li><a href=""><i class="fa-brands fa-twitter"></i></a></li>
-                        <li><a href=""><i class="fa-brands fa-square-instagram"></i></a></li>
-                        <li><a href=""><i class="fa-brands fa-youtube"></i></a></li>
-                        <li><a href=""><i class="fa-solid fa-envelope"></i></a></li>
-                    </ul> 
-                </div>
-            </div>
-        </div>
-    </section>
+    <section class="aboutBanner">
+      <div class="container">
+          <div class="aboutBanner__wrapper">
+              <div class="aboutBanner__left">
+                  <img src="./img/about.png" alt="">
+                  <small>Interior Designer</small>
+              </div>
+              <div class="aboutBanner__right">
+                  <h1> ABOUT US</h1>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos architecto temporibus quo beatae, quis aspernatur assumenda earum eius aut omnis enim laborum id deleniti perferendis laudantium, atque natus, consequatur sint delectus ut ducimus eligendi! Quibusdam, eveniet, a iste ullam magni sapiente cum repellendus placeat sunt sit asperiores dolore rem labore.</p>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam autem cupiditate ipsa aut ipsum nobis accusantium sed, fuga, quas temporibus, accusamus non voluptates quam aspernatur tempore eius repellat suscipit! Soluta error recusandae eos, expedita vero voluptas sed tempora quae quia asperiores, ipsa optio, molestias aspernatur minima! Odio eligendi officia itaque, dolorem repellendus deleniti architecto fuga. Reiciendis eos mollitia esse molestias?</p>
+                  <ul>
+                      <li><a href=""><i class="fa-brands fa-facebook"></i></a></li>
+                      <li><a href=""><i class="fa-brands fa-twitter"></i></a></li>
+                      <li><a href=""><i class="fa-brands fa-square-instagram"></a></i></li>
+                      <li><a href=""><i class="fa-brands fa-youtube"></i></a></li>
+                      <li><a href=""><i class="fa-solid fa-envelope"></i></a></li>
+                  </ul>
+              </div>
+          </div>
+      </div>
+  </section>
      <!-- LATEST STYLE BANNER-->
-     <section class="package">
-        <div class="package_wrapper">
-          <h2>Interior Design Package</h2>
-          <div class="package_theme">
-            <div class="package_left">
-              <img src="./img/catalog-1.png" alt="" />
+   <section class="latestBanner">
+        <div class="container">
+            <h2>Latest Style</h2>
+            <h5>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil voluptas expedita nam dicta impedit obcaecati rerum rem quibusdam odio nobis.</h5>
+             <div class="latestBanner__wrapper">
+                <div class="latestBanner__card">
+                    <img src="/img/latest-1.png" alt="">
+                    <div class="latestBanner__card--content">
+                        <h3>Formal Theme</h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim, quia illo. Ipsam iusto corporis doloremque.<p>
+                    </div>
+                </div>
+
+                <div class="latestBanner__card">
+                    <img src="/img/latest-2.png" alt="">
+                    <div class="latestBanner__card--content">
+                        <h3>Modern Theme</h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim, quia illo. Ipsam iusto corporis doloremque.<p>
+                    </div>
+                </div>
+
+                <div class="latestBanner__card">
+                    <img src="/img/latest-3.png" alt="">
+                    <div class="latestBanner__card--content">
+                        <h3>Boho Theme</h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim, quia illo. Ipsam iusto corporis doloremque.<p>
+                    </div>
+                </div>
+
+                <div class="latestBanner__card">
+                    <img src="/img/latest-4.png" alt="">
+                    <div class="latestBanner__card--content">
+                        <h3>Minimalist Theme</h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim, quia illo. Ipsam iusto corporis doloremque.<p>
+                    </div>
+                </div>
+
+                <div class="latestBanner__card">
+                    <img src="/img/latest-5.png" alt="">
+                    <div class="latestBanner__card--content">
+                        <h3>Wood Theme</h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim, quia illo. Ipsam iusto corporis doloremque.<p>
+                    </div>
+                </div>
+
+                <div class="latestBanner__card">
+                    <img src="/img/latest-6.png" alt="">
+                    <div class="latestBanner__card--content">
+                        <h3>Spanish Theme</h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim, quia illo. Ipsam iusto corporis doloremque.<p>
+                    </div>
+                </div>
             </div>
-            <div class="package_right">
-              <h2>Minimalist Theme</h2>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-                iaculis suscipit ipsum sit amet laoreet. Nam sit amet enim
-                vulputate magna ornare ullamcorper nec vitae ante. Integer
-                hendrerit ligula sit amet tortor pulvinar suscipit. Vestibulum et
-                volutpat enim. Donec nisl velit, volutpat ut fermentum ut, egestas
-                eget purus. Phasellus condimentum tellus eu velit eleifend, at
-                bibendum diam gravida. In dictum nisl id leo tincidunt, vel
-                vestibulum metus sollicitudin. Praesent blandit leo vitae ultrices
-                suscipit. Etiam elementum ornare neque at dictum. Curabitur nisi
-                nibh, molestie sed fermentum sed, mollis id neque. In at ipsum
-                mattis, consequat orci vitae, mattis ipsum. Nam libero magna,
-                tincidunt et eleifend a, elementum malesuada nibh. Maecenas ornare
-                sapien ut leo sagittis, at pretium sem faucibus.
-              </p>
-            </div>
-          </div>
-          <div class="package_theme">
-            <div class="package_left">
-              <img src="./img/catalog-2.png" alt="" />
-            </div>
-            <div class="package_right">
-              <h2>Retro Theme</h2>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-                iaculis suscipit ipsum sit amet laoreet. Nam sit amet enim
-                vulputate magna ornare ullamcorper nec vitae ante. Integer
-                hendrerit ligula sit amet tortor pulvinar suscipit. Vestibulum et
-                volutpat enim. Donec nisl velit, volutpat ut fermentum ut, egestas
-                eget purus. Phasellus condimentum tellus eu velit eleifend, at
-                bibendum diam gravida. In dictum nisl id leo tincidunt, vel
-                vestibulum metus sollicitudin. Praesent blandit leo vitae ultrices
-                suscipit. Etiam elementum ornare neque at dictum. Curabitur nisi
-                nibh, molestie sed fermentum sed, mollis id neque. In at ipsum
-                mattis, consequat orci vitae, mattis ipsum. Nam libero magna,
-                tincidunt et eleifend a, elementum malesuada nibh. Maecenas ornare
-                sapien ut leo sagittis, at pretium sem faucibus.
-              </p>
-            </div>
-          </div>
-          <div class="package_theme">
-            <div class="package_left">
-              <img src="./img/catalog-3.png" alt="" />
-            </div>
-            <div class="package_right">
-              <h2>Minimalist Theme</h2>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-                iaculis suscipit ipsum sit amet laoreet. Nam sit amet enim
-                vulputate magna ornare ullamcorper nec vitae ante. Integer
-                hendrerit ligula sit amet tortor pulvinar suscipit. Vestibulum et
-                volutpat enim. Donec nisl velit, volutpat ut fermentum ut, egestas
-                eget purus. Phasellus condimentum tellus eu velit eleifend, at
-                bibendum diam gravida. In dictum nisl id leo tincidunt, vel
-                vestibulum metus sollicitudin. Praesent blandit leo vitae ultrices
-                suscipit. Etiam elementum ornare neque at dictum. Curabitur nisi
-                nibh, molestie sed fermentum sed, mollis id neque. In at ipsum
-                mattis, consequat orci vitae, mattis ipsum. Nam libero magna,
-                tincidunt et eleifend a, elementum malesuada nibh. Maecenas ornare
-                sapien ut leo sagittis, at pretium sem faucibus.
-              </p>
-            </div>
-          </div>
-          
         </div>
     </section>
     <!-- CALL TO ACTION -->
