--- a/updates.html
+++ b/updates.html
@@ -30,21 +30,129 @@
                 </div>
             </div>
         </div>
-    </header>
-    <section class="updates">
-        <div class="container">
-            <div class="updates__wrapper">
-                <div class="upates__left">
-                    <h1>latest Theme</h1>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet explicabo optio architecto assumenda deleniti aut nam labore magni tempore suscipit. Debitis aspernatur laborum laboriosam exercitationem quia non repudiandae id dolor beatae distinctio obcaecati facilis quod doloribus, minima optio. Sapiente distinctio et praesentium itaque soluta. Quasi, officia, eum nisi, cum distinctio pariatur ex officiis numquam id dolorum enim obcaecati porro? Eveniet inventore asperiores odio eos cum numquam, modi officia animi et sunt. Provident facere architecto fugit repellat, rem optio voluptates suscipit accusamus reprehenderit modi quaerat beatae dignissimos ducimus, est eveniet blanditiis eum minima inventore incidunt. Necessitatibus molestias praesentium veniam beatae excepturi?</p>
-             
+  <!-- UPDATES BANNER -->
+<section class="updatesBanner">
+    <div class="container">
+        <div class="updates__wrapper">
+            <div class="updates__left">
+                <h1>LATEST THEME</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiseIng elit. Aliquam iaculis suscipit |psum sit
+                    amet laoreet. Nam sit amet enim vulputate magna ornare ullamcorper nec vitae ante.
+                    Integer hendrerit ligula sit amet tortor pulvinar suscipit. Vestibulum et volutpat enlm.
+                    Donec nisl velit, volutpat ut fermentum ut, egestas eget purus. Phasellus condimentum
+                    tellus eu velit eleifend , at bibendum diam gravida. In dictum nisl id leo_tincidunt, vel
+                    vestibulum metus sollicltudin. Praesent blandit leo vitae ultrices suscipit. Etiam
+                    elementum ornare neque at dictum. Curabitur nisinibh, molestie sed fermentum sed, mollis
+                    id neque. In at ipsum mattis, consequat orci vitae, mattis ipsum. Nam libero magna,
+                    tincidunt et eleifend a, elementum malesuada nibh. Maecenas ornaresa pienutl eosagittls,
+                    at pretlum sem faucibus.</p>
                 </div>
-            </div>
-            <div class="update__right">
-                <img src="./img/update-banner.png" alt="" />
+                <div class="updates__right">
+                <img src="./img/update-banner.png" alt="">
+                </div>
+        </div>
+    </div>
+  </section>
+  <!-- BUILDING DESIGN -->
+<section class="bdBanner">
+    <div class="container">
+        <div class="bd__wrapper">
+        <div class="bd__main">
+            <h1>Building Design</h1>
+  
+            <div class="bd__cards">
+                <div class="bd__card">
+                    <h2>Residential Design</h2>
+  
+                    <p>sagittis at quam enim. Id epet sit lustun esse pharetra. tacinla malerada est suspendise seen factial trstleoe cu. Laoreet lobortis ancu allquam sit.</p>
+                    <a><i class="fa-solid fa-house-chimney"></i></a>
+                </div>
+  
+                <div class="bd__card">
+                    <h2>Hospitality Design</h2>
+  
+                    <p>sagittis at quam enim. Id epet sit lustun esse pharetra. tacinla malerada est suspendise seen factial trstleoe cu. Laoreet lobortis ancu allquam sit.</p>
+                    <a><i class="fa-solid fa-house-chimney"></i></a>
+                </div>
+  
+                <div class="bd__card">
+                    <h2>Restaurant Design</h2>
+  
+                    <p>sagittis at quam enim. Id epet sit lustun esse pharetra. tacinla malerada est suspendise seen factial trstleoe cu. Laoreet lobortis ancu allquam sit.</p>
+                    <a><i class="fa-solid fa-building"></i></a>
+                </div>
+  
+                <div class="bd__card">
+                    <h2>Commercial Design</h2>
+  
+                    <p>sagittis at quam enim. Id epet sit lustun esse pharetra. tacinla malerada est suspendise seen factial trstleoe cu. Laoreet lobortis ancu allquam sit.</p>
+                    <a><i class="fa-solid fa-building"></i></a>
+                </div>
+  
+                <div class="bd__card">
+                    <h2>Corporate Design</h2>
+  
+                    <p>sagittis at quam enim. Id epet sit lustun esse pharetra. tacinla malerada est suspendise seen factial trstleoe cu. Laoreet lobortis ancu allquam sit.</p>
+                    <a><i class="fa-solid fa-building"></i></a>
+                </div>
+  
+                <div class="bd__card">
+                    <h2>Industrial Design</h2>
+  
+                    <p>sagittis at quam enim. Id epet sit lustun esse pharetra. tacinla malerada est suspendise seen factial trstleoe cu. Laoreet lobortis ancu allquam sit.</p>
+                    <a><i class="fa-solid fa-warehouse"></i></a>
+                </div>
+  
             </div>
         </div>
-    </section>
+        <div class="bd__sidebar">
+            <h1>Categories</h1>
+            <ul>
+                <li>Residential <span>(6)</span></li>
+                <li>Hospitality <span>(3)</span></li>
+                <li>Commercial <span>(3)</span></li>
+                <li>Restaurant <span>(6)</span></li>
+                <li>Corporate <span>(3)</span></li>
+                <li>Industrial <span>(3)</span></li>
+  
+            </ul>
+        </div>
+        </div>
+    </div>
+  </section>
+<!-- RECENT PROJECTS-->
+<section class="projs">
+  <div class="container">
+      <h2>Recent Projects</h2>
+      <div class="projs__wrapper">
+          <div class="projectCard">
+              <img src="./img/commercial.png" alt="">
+              <ul>
+                  <li><i class="fa-solid fa-tags"></i> Commercial</li>
+                  <li><i class="fa-solid fa-calendar-days"></i> May 2023</li>
+              </ul>
+          </div>
+
+          <div class="projectCard">
+              <img src="./img/corporate.png" alt="">
+              <ul>
+                  <li><i class="fa-solid fa-tags"></i> Corporate</li>
+                  <li><i class="fa-solid fa-calendar-days"></i> May 2023</li>
+              </ul>
+          </div>
+
+          <div class="projectCard">
+              <img src="./img/restaurant.png" alt="">
+              <ul>
+                  <li><i class="fa-solid fa-tags"></i> Commercial</li>
+                  <li><i class="fa-solid fa-calendar-days"></i> May 2023</li>
+              </ul>
+          </div>
+
+      </div>
+  </div>
+</section>
+
     <!-- CALL TO ACTION -->
  <!-- section.cta>.container>.cta__wrapper-->
  <section class="cta">
